<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:fab="http://schemas.android.com/apk/lib/com.ninebox.nineboxapp"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_main"
    android:orientation="vertical"
    android:weightSum="1"
    tools:context="nineBoxEvaluation.Evaluation">

    <include
        android:id="@+id/tool_bar"
        layout="@layout/tool_bar" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/tool_bar"
        android:orientation="vertical"
        android:weightSum="5">


        <android.support.v7.widget.CardView
            android:id="@+id/top_card"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.8"
            android:background="@color/background_main"
            android:elevation="@dimen/global_elevation"
            android:orientation="vertical"
            card_view:cardBackgroundColor="@color/background_main">

            <LinearLayout
                android:id="@+id/candidate_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tool_bar"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/evalCandidateName"
                    style="@style/Text_Bold"
                    android:layout_gravity="center|top" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/candidate_name"
                android:layout_gravity="center|bottom"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/question_x_of_x_prompt"
                    style="@style/Text_Instructional"
                    android:layout_height="@dimen/question_number_height"
                    android:layout_gravity="right|bottom"
                    android:gravity="right|bottom"
                    android:text="@string/question_x_of_x_prompt" />

                <TextView
                    android:id="@+id/curr_question_no"
                    style="@style/Text_Instructional"
                    android:layout_width="@dimen/question_number_width"
                    android:layout_height="@dimen/question_number_height"
                    android:layout_gravity="right|bottom"
                    android:gravity="right|bottom" />

                <TextView
                    android:id="@+id/question_x_of_x_of"
                    style="@style/Text_Instructional"
                    android:layout_height="@dimen/question_number_height"
                    android:layout_gravity="right|bottom"
                    android:gravity="right|bottom"
                    android:text="@string/question_x_of_x_of" />

                <TextView
                    android:id="@+id/max_question_no"
                    style="@style/Text_Instructional"
                    android:layout_width="@dimen/question_number_width"
                    android:layout_height="@dimen/question_number_height"
                    android:layout_gravity="left|bottom"
                    android:gravity="left|bottom" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <LinearLayout
            android:id="@+id/bottom_card"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_below="@+id/top_card"
            android:layout_weight="3"
            android:background="@color/background_light"
            android:orientation="vertical"
            android:weightSum="10"
            >

            <TextView
                android:id="@+id/question_text"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="5.75"
                android:layout_gravity="top"
                android:layout_margin="@dimen/text_margin"
                android:padding="@dimen/text_padding"
                android:textColor="@color/text_dark"
                android:textSize="@dimen/text_size_medium" />

            <SeekBar
                android:id="@+id/responseSeekBar"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:layout_margin="@dimen/text_margin_small"
                android:max="@integer/maxResponse"
                android:padding="@dimen/text_padding"
                android:progress="1"
                android:progressDrawable="@drawable/seekbar_progress"
                android:thumb="@drawable/seekbar_thumb" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2.05"
                android:orientation="horizontal"
                android:layout_gravity="bottom|center">

                <TextView
                    android:id="@+id/tvLabel1"
                    style="@style/Slidder_Legend"
                    android:layout_alignParentLeft="true"
                    android:text="0" />

                <TextView
                    android:id="@+id/tvLabel2"
                    style="@style/Slidder_Legend"
                    android:layout_centerHorizontal="true"
                    android:text="5" />

                <TextView
                    android:id="@+id/tvLabel3"
                    style="@style/Slidder_Legend"
                    android:layout_alignParentRight="true"
                    android:text="10" />
            </RelativeLayout>

        </LinearLayout>

        <LinearLayout style="@style/MainButtonLayout"
            android:layout_below="@+id/bottom_card"
            android:layout_weight="0.14">

            <Button
                android:id="@+id/cancel_button"
                style="@style/MainButton"
                android:background="@color/mutedbutton_color"
                android:text="@string/cancel_button" />

            <Button
                android:id="@+id/next_question_button"
                style="@style/MainButton"
                android:text="@string/next_question_button" />
        </LinearLayout>

    </LinearLayout>


</android.support.design.widget.CoordinatorLayout>